--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pegah Ghods Mohammadi - Full-Stack Developer</title>
     <meta name="description" content="Innovative Full-Stack Developer specializing in modern web technologies, creating exceptional digital experiences with cutting-edge design and development.">
+
+    <meta name="google-site-verification" content="t-4Io_YCv0EdkN76Xm8i6HO2WJxm-IhPbN53gCJvxfo" />
     
     <!-- Immediate redirect to main portfolio -->
     <script>
